# mobile_order

./: MANIFEST.in  README.md  WORKFLOW.md  pyproject.toml  setup_nginx.sh
mobile_order/: __init__.py  api.py  hooks.py
mobile_order/doctype/customer_order/: customer_order.json
mobile_order/doctype/customer_order_item/: customer_order_item.json
mobile_order/doctype/sales_person/: sales_person.json
mobile_order/mobile_order/: __init__.py
mobile_order/mobile_order/doctype/customer_order/: customer_order.json  customer_order.py
mobile_order/mobile_order/doctype/customer_order_item/: customer_order_item.json  customer_order_item.py
mobile_order/mobile_order/doctype/sales_person/: sales_person.json  sales_person.py
mobile_order/public/: __init__.py
mobile_order/public/css/: admin.css  order.css
mobile_order/public/html/: order.html
mobile_order/public/js/: customer_order.js  inventory.js  order.js
mobile_order/www/: admin.html  admin.js  admin.py  inventory.html  inventory.js  inventory.py  order.html  order.js  order.py
mobile_order/www/admin/: admin.css  admin.js  index.html
mobile_order/www/order/: index.html  order.css  order.js
translations/: zh.csv
